--- a/San_Julian.mw
+++ b/San_Julian.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar san julian.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Julian, Eastern Samar
 | 1990 = 11469		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Julian''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 14,498 totoo. Walay kabaleg tan sukat to ya 150.62 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6814.	
 	
-
 ==Saray barangay==
 * Bunacan
 * Campidhan
@@ -32,10 +32,14 @@ Say '''San Julian''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [
 * San Miguel
 * Lunang
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
