--- a/San_Policarpo.mw
+++ b/San_Policarpo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar san policarpo.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Policarpo, Eastern Samar
 | 1990 = 9970		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Policarpo''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 13,836 totoo. Walay kabaleg tan sukat to ya 78 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6821.	
 	
-
 ==Saray barangay==
 * Alugan
 * Bahay
@@ -33,10 +33,14 @@ Say '''San Policarpo''' et kumalima ya klase baley ed luyag na [[Eastern Samar]]
 * Tabo
 * Tan-awan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
