--- a/Borongan.mw
+++ b/Borongan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_eastern_samar_borongan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Borongan''' et kumanem ya klase siyudad ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 64,457 totoo. <br> 	
-Walay kabaleg tan sukat to ya 475.00 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 6800. 			
+Walay kabaleg tan sukat to ya 475.00 sq. km. Sikato et walad  alenleneg ya distrito. Say zip code to et 6800. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Eastern Samar}}		
 									
 [[Category:Saray siyudad na Filipinas]]
