--- a/Jordan,_Guimaras.mw
+++ b/Jordan,_Guimaras.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator guimaras jordan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jordan, Guimaras
 | 1990 = 45852		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Jordan''' et kumatlo ya klase baley ed luyag na [[Guimaras]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 34,791 totoo. Walay kabaleg tan sukat to ya 126.11 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 5045.	
-
 
 ==Saray barangay==
 * Alaguisoc
@@ -30,11 +30,14 @@ Say '''Jordan''' et kumatlo ya klase baley ed luyag na [[Guimaras]], [[Pilipinas
 * Sinapsapan
 * Santa Teresa
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Guimaras}}															
+{{Guimaras}}	
+														
 [[Category:Saray baley na Guimaras]]
