--- a/San_Lorenzo.mw
+++ b/San_Lorenzo.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator guimaras san lorenzo.png|right|270px]]
-			
+{{Infobox location}}
+		
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Lorenzo, Guimaras
 | 1990 =		
@@ -14,7 +14,6 @@
 |}}
 Say '''San Lorenzo''' et kumalima ya klase baley ed luyag na [[Guimaras]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 24,032 totoo. Walay kabaleg tan sukat to ya 93.04 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 5047.	
 		
-
 ==Saray barangay==
 * Aguilar
 * Cabano
@@ -29,11 +28,14 @@ Say '''San Lorenzo''' et kumalima ya klase baley ed luyag na [[Guimaras]], [[Pil
 * Suclaran
 * Tamborong
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Guimaras}}													
+{{Guimaras}}	
+												
 [[Category:Saray baley na Guimaras]]
