--- a/Asipulo.mw
+++ b/Asipulo.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_asipulo.png|right|Mapa na Ifugao ya nanengneng so location na Asipulo]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Asipulo, Ifugao
 | 1990 =		
@@ -26,6 +27,9 @@ Say Asipulo walay 9 ya [[barangay]].
 * Nungawa
 * Panubtuban
 * Pula
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
