--- a/Hingyon.mw
+++ b/Hingyon.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_hingyon.png|right|Mapa na Ifugao ya nanengneng so location na Hingyon]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hingyon, Ifugao
 | 1990 = 8373		
@@ -30,12 +31,13 @@ Say Hingyon walay 12 ya [[barangay]].
 * Umalbong
 * Northern Cababuyan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ifugao}}
-
-
 
 [[Category:Saray baley na Ifugao]]
