--- a/Kiangan.mw
+++ b/Kiangan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_kiangan.png|right|Mapa na Ifugao ya nanengneng so location na Kiangan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kiangan, Ifugao
 | 1990 = 21329		
@@ -32,10 +33,13 @@ Say Kiangan walay 14 ya [[barangay]].
 *Poblacion
 *Tuplac
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ifugao}}
 
-[[Category:Saray nipaway ya Ifugao]]
+[[Category:Saray baley na Ifugao]]
