--- a/Lubuagan.mw
+++ b/Lubuagan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_kalinga_lubuagan.png|right|Mapa na Kalinga ya nanengneng so location na Lubuagan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lubuagan, Kalinga
 | 1990 = 9189		
@@ -26,6 +27,9 @@ Say Lubuagan walay 9 ya [[barangay]].
 * Upper Uma
 * Antonio Canao
 * Uma del Norte (Western Luna Uma)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
