--- a/Alaminos,_Laguna.mw
+++ b/Alaminos,_Laguna.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Alaminos |
- sealfile     = |
- locatormapfile = Ph_locator_laguna alaminos.png |
- caption      = Map of [[Laguna]] showing the location of Alaminos. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = none |
- barangays    = 15 |
- class        = 3rd class |
- mayor        = Eladio Magampon-La Cantota |
- founded      = Oktobre 16, [[2011]] |
- cityhood     = - |
- areakm2      = 57.46 |
- pop2000      = 43,526 |
- popden2000   = 7600 |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alaminos, Laguna
@@ -32,7 +13,7 @@
 | 2030 = 		
 |}}
 
-Say '''Alaminos''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]]. Nagsasakupan diad baley ran bangonan ken Braganza nen Oktobre 16, [[2011]] so [[Alaminos City]], [[Pangasinan]]
+Say '''Alaminos''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]]. Nagsasakupan diad baley ran bangonan ken Braganza nen Oktubre 16, [[2011]] so [[Alaminos|Siyudad na Alaminos]], [[Pangasinan]]
 
 == Listaan na barangay ==
 
@@ -54,8 +35,10 @@ Saray [[barangay]] no fifteen:
 * San Roque
 * Santa Rosa
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
