--- a/Calauan.mw
+++ b/Calauan.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Calauan<br />''Kalawan''|
- sealfile     = |
- locatormapfile = Ph_locator_laguna calauan.png |
- caption      = Map of [[Cavite]] showing the location of Calauan. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = none |
- barangays    = 17 |
- class        = 2nd class |
- mayor        = [[Baby Lerris]] |
- founded      = Hunio 19, [[2012]] |
- cityhood     = - |
- areakm2      = 65.4000 |
- pop2000      = 54,240 |
- popden2000   = 830|
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calauan, Laguna
 | 1990 = 32736		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Calauan''' ([[salitan Filipino|Filipino]]: ''Kalawan''; [[salitan Baybayin|Baybayin]]: ''カラワン件''), sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
+Say '''Calauan''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]].
 
 == Listaan na barangay ==
 
@@ -59,7 +41,10 @@ Saray [[barangay]] no seventeen:
 * Santo Tomas
 </td></tr></table>
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
