--- a/Tubaran.mw
+++ b/Tubaran.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator lanao del sur tubaran.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tubaran, Lanao del Sur
 | 1990 = 8491		
@@ -36,10 +37,14 @@ Say '''Tubaran''' et kumapat ya klase baley ed luyag na [[Lanao del Sur]], [[Pil
 * Metadicop
 * Pagalamatan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Lanao del Sur}}													
+{{Lanao del Sur}}	
+												
 [[Category:Saray baley na Lanao del Sur]]
