--- a/Abuyog.mw
+++ b/Abuyog.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte abuyog.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Abuyog, Leyte
 | 1990 = 47265		
@@ -78,6 +79,9 @@ Say '''Abuyog''' et unaan ya klase baley ed luyag na [[Leyte]], [[Pilipinas]]. U
 * Santa Fe (Pob.)
 * Santo Niño (Pob.)
 * Victory (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
