--- a/Babatngon.mw
+++ b/Babatngon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte babatngon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Babatngon, Leyte
 | 1990 = 17795		
@@ -40,10 +41,14 @@ Say '''Babatngon''' et kumapat ya klase baley ed luyag na [[Leyte]], [[Pilipinas
 * Naga-asan
 * San Isidro
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}														
+{{Leyte}}	
+													
 [[Category:Saray baley na Leyte]]
