--- a/Barugo.mw
+++ b/Barugo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte barugo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Barugo, Leyte
 | 1990 = 23817		
@@ -52,10 +53,14 @@ Say '''Barugo''' et kumapat ya klase baley ed luyag na [[Leyte]], [[Pilipinas]].
 * Santarin
 * Tutug-an
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}														
+{{Leyte}}	
+													
 [[Category:Saray baley na Leyte]]
