--- a/Bato,_Leyte.mw
+++ b/Bato,_Leyte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte bato.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bato, Leyte
 | 1990 = 28197		
@@ -47,10 +48,14 @@ Say '''Bato''' et kumapat ya klase baley ed luyag na [[Leyte]], [[Pilipinas]]. U
 * Marcelo
 * Rivilla
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}														
+{{Leyte}}	
+													
 [[Category:Saray baley na Leyte]]
