--- a/Capoocan.mw
+++ b/Capoocan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte capoocan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Capoocan, Leyte
 | 1990 = 23687		
@@ -36,10 +37,14 @@ Say '''Capoocan''' et kumapat ya klase baley ed luyag na [[Leyte]], [[Pilipinas]
 * Tolibao
 * Visares
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}													
+{{Leyte}}	
+												
 [[Category:Saray baley na Leyte]]
