--- a/Hindang.mw
+++ b/Hindang.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte hindang.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hindang, Leyte
 | 1990 = 16272		
@@ -34,11 +35,15 @@ Say '''Hindang''' et kumalima ya klase baley ed luyag na [[Leyte]], [[Pilipinas]
 * San Vicente
 * Tabok
 * Tagbibi
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}													
+{{Leyte}}	
+												
 [[Category:Saray baley na Leyte]]
