--- a/Isabel.mw
+++ b/Isabel.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator leyte isabel.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Isabel, Leyte
 | 1990 = 33389		
@@ -38,11 +39,15 @@ Say '''Isabel''' et unaan ya klase baley ed luyag na [[Leyte]], [[Pilipinas]]. U
 * Tabunok
 * Tolingon
 * Tubod
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}													
+{{Leyte}}	
+												
 [[Category:Saray baley na Leyte]]
