--- a/Tunga.mw
+++ b/Tunga.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator leyte tunga.png|right|270px]]	
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tunga, Leyte
@@ -23,11 +23,15 @@ Say '''Tunga''' et kumanem ya klase baley ed luyag na [[Leyte]], [[Pilipinas]]. 
 * San Roque (Pob.)
 * San Vicente (Pob.)
 * Sto. Niño (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Leyte}}													
+{{Leyte}}	
+												
 [[Category:Saray baley na Leyte]]
