--- a/Ormoc.mw
+++ b/Ormoc.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_leyte_ormoc.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Ormoc''' et unaan ya klase siyudad ed luyag na [[Leyte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 191,200 totoo. <br> 	
-Walay kabaleg tan sukat to ya 613.60 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 6541. 			
+Walay kabaleg tan sukat to ya 613.60 sq. km. Sikato et walad  kumapat ya distrito. Say zip code to et 6541. 
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Leyte}}		
 									
 [[Category:Saray siyudad na Filipinas]]
