--- a/Siyudad_na_Cotabato.mw
+++ b/Siyudad_na_Cotabato.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_maguindanao_cotabato.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Siyudad na Cotabato''' et kumatlo ya klase siyudad ed luyag na [[Maguindanao]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 299,438 totoo. <br> 	
-Walay kabaleg tan sukat to ya 176.00 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9600. 			
+Walay kabaleg tan sukat to ya 176.00 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 9600. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Maguindanao}}	
 									
 [[Category:Saray siyudad na Filipinas]]
