--- a/Buldon.mw
+++ b/Buldon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao buldon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Buldon, Maguindanao
 | 1990 = 22730		
@@ -29,6 +30,9 @@ Say '''Buldon''' et kumapat ya klase baley ed luyag na [[Maguindanao]], [[Pilipi
 * Pantawan
 * Piers
 * Rumidas
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
