--- a/Buluan.mw
+++ b/Buluan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao buluan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Buluan, Maguindanao
 | 1990 = 53143		
@@ -21,6 +22,9 @@ Say '''Buluan''' et kumapat ya klase baley ed luyag na [[Maguindanao]], [[Pilipi
 * Popol
 * Talitay
 * Upper Siling
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
