--- a/Datu_Abdullah_Sangki.mw
+++ b/Datu_Abdullah_Sangki.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao datu abdullah sangki.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Abdullah Sangki, Maguindanao
 | 1990 =		
@@ -24,6 +25,9 @@ Say '''Datu Abdullah Sangki''' et kumanem ya klase baley ed luyag na [[Maguindan
 *Sugadol
 *Talisawa
 *Tukanolocong (Tukanologong)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
