--- a/Datu_Blah_T._Sinsuat.mw
+++ b/Datu_Blah_T._Sinsuat.mw
@@ -1,4 +1,5 @@
-[[File:Blank.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Blah T. Sinsuat, Maguindanao
 | 1990 =		
@@ -27,6 +28,9 @@ Say '''Datu Blah T. Sinsuat''' et unaan ya klase baley ed luyag na [[Maguindanao
 * Tambak
 * Tubuan
 * Pura
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
