--- a/Datu_Hoffer_Ampatuan.mw
+++ b/Datu_Hoffer_Ampatuan.mw
@@ -1,4 +1,5 @@
-[[File:Blank.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Hoffer Ampatuan, Maguindanao
 | 1990 =		
@@ -25,6 +26,9 @@ Say '''Datu Hoffer Ampatuan''' et kumanem ya klase baley ed luyag na [[Maguindan
 * Tuayan
 * Tuayan I
 * Tuntungan 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
