--- a/Datu_Montawal.mw
+++ b/Datu_Montawal.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao pagagawan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Montawal, Maguindanao
 | 1990 =		
@@ -26,6 +27,9 @@ Say '''Datu Montawal''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [
 *Talitay
 *Tunggol
 *Katitisan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
