--- a/Datu_Odin_Sinsuat.mw
+++ b/Datu_Odin_Sinsuat.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao datu odin sinsuat.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Odin Sinsuat, Maguindanao
 | 1990 = 52370		
@@ -48,6 +49,9 @@ Say '''Datu Odin Sinsuat''' et kumanem ya klase baley ed luyag na [[Maguindanao]
 * Tapian
 * Taviran
 * Tenonggos
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
