--- a/Datu_Paglas.mw
+++ b/Datu_Paglas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao datu paglas.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Paglas, Maguindanao
 | 1990 = 13970		
@@ -37,6 +38,9 @@ Say '''Datu Paglas''' et kumapat ya klase baley ed luyag na [[Maguindanao]], [[P
 * Puya
 * Salendab
 * Sepaka
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
