--- a/Datu_Piang.mw
+++ b/Datu_Piang.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao datu piang.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Piang, Maguindanao
 | 1990 = 53311		
@@ -30,6 +31,9 @@ Say '''Datu Piang''' et kumadwa ya klase baley ed luyag na [[Maguindanao]], [[Pi
 * Montay
 * Poblacion (Dulawan)
 * Reina Regente
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
