--- a/Datu_Salibo.mw
+++ b/Datu_Salibo.mw
@@ -1,4 +1,5 @@
-[[File:Blank.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Salibo, Maguindanao
 | 1990 =		
@@ -31,6 +32,9 @@ Say '''Datu Salibo''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[P
 * Penditen
 * Sambulawan
 * Tee
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
