--- a/Datu_Saudi_Ampatuan.mw
+++ b/Datu_Saudi_Ampatuan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao datu saudi-ampatuan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Datu Saudi-Ampatuan, Maguindanao
 | 1990 =		
@@ -22,6 +23,9 @@ Say '''Datu Saudi-Ampatuan''' et kumapat ya klase baley ed luyag na [[Maguindana
 *Kitapok
 *Madia
 *Salibu
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
